--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 buildscript {
     repositories {
         jcenter()
+        google()// <-- add this.
+        maven { url "https://jitpack.io" }
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.4.1'
     }
 }
 
 allprojects {
     repositories {
-        maven { url "https://jitpack.io" }
+        google()// <-- add this.
         jcenter()
+        maven { url "https://jitpack.io" }
+
     }
 }
 
@@ -18,12 +23,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    //buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "menion.android.whereyougo"
-        versionCode 45
-        versionName "0.9.3"
+        versionCode 46
+        versionName "1.9.5cghove"
         minSdkVersion 15
         targetSdkVersion 23
     }
@@ -51,12 +56,13 @@ android {
 
 dependencies {
     fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.asamm:locus-api-android:0.2.7'
-    compile 'com.github.biylda:openwig:3a1e405'
-    compile 'com.github.jfmdev:aFileDialog:v1.0.6'
-    compile 'com.github.jspricke.mapsforge-map-whereyougo:mapsforge-map:75d7c20'
-    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+    implementation 'com.android.support:support-v4:25.3.1'
+    implementation 'com.asamm:locus-api-android:0.2.7'
+    implementation 'com.github.biylda:openwig:3a1e405'
+    implementation 'com.github.jfmdev:aFileDialog:v1.0.6'
+    implementation 'com.github.jspricke.mapsforge-map-whereyougo:mapsforge-map:75d7c20'
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.6'
+    implementation 'com.google.android.gms:play-services-places:9.2.1'
 }
